1. Removed zoom button from unoccupied spots. 2. Moved the add spot and add whiteboard buttons to bottom right. 3. Unoccupied spots fade out as they go back and fade in as they come forward. 4. Made the exit zoom mode button more prominent. 5. Corrected a syntactically wrong call to sessionStorage.setItem() in callcast.js 6. On firefox, index.js(line 95) complained about the way Callcast and Callcast.log 's existence     are checked. So now the check is made using typeof()

--- a/projects/server/carousel/css/index.css
+++ b/projects/server/carousel/css/index.css
@@ -79,8 +79,8 @@ a:active
 }
 img.close 
 {
-  width: 12px;
-  height: 12px;
+  width: 20px;
+  height: 20px;
   position: absolute;
   right: 3px;
   top: 3px;
@@ -253,11 +253,15 @@ body > div#lower-right
    z-index: 1000;
    line-height: 2em;
 }
-body > div#lower-right > input 
+body > div#lower-right > input
 {
   float:right;
   width: 24px;
   height: 24px;
+  margin-left: 5px;
+}
+body > div#lower-right > p {
+  opacity: 0.6;
 }
 body > div#lower-right > input#dlbtn
 {
@@ -287,16 +291,24 @@ body > div#lower-right > input.twitter {
   background-image: url("../images/btn-twitter.png");
 }
 body > div#lower-right > input.fbSend {
-  margin-top: 2px;
   width: 61px;
   background-image: url("../images/fbSend.png");
 }
 body > div#lower-right > input.fbShare {
   margin-left: 15px;
-  margin-top: 2px;
   width: 69px;
   background-image: url("../images/fbShare.png");
 }
+/*<MANJESH>*/
+body > div#lower-right > input#addWhiteBoard {
+  background-image: url('../images/whiteboard.png');
+  background-size: 100%;
+}
+body > div#lower-right > input#addItem {
+  background-image: url('../images/plus.png');
+  background-size: 100%;
+}
+/*</MANJESH>*/
 body > div#lower-right > input#video:disabled {
   background-image: url("../images/video-disabled.png");
 }
@@ -438,7 +450,7 @@ body > div#meeting > div#zoom {
 }
 body > div#meeting > div#zoom > img.close 
 {
-  opacity: 0.4;
+  opacity: 0.6;
   width: 12px;
   height: 12px;
   position: absolute;
@@ -561,45 +573,6 @@ body > div#meeting > div#streams {
 body > div#meeting > div#streams > div#scarousel {
   width: 100%;
   height: 100%;
-}
-body > div#meeting > div#streams > div#scarousel div#addItem
-{
-  opacity: 0.4;
-  width: 20px;
-  height: 20px;
-  margin-right: 5px;
-  margin-bottom:5px;
-  position:absolute;
-  bottom:25px;
-  right:5px;
-}
-body > div#meeting > div#streams > div#scarousel div#addWhiteBoard
-{
-  background-image: url("../images/whiteboard.png");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  width: 20px;
-  height: 20px;
-  margin-right: 5px;
-  margin-bottom:5px;
-  position:absolute;
-  bottom:55px;
-  right:5px;
-}
-/*<MANJESH>*/
-body > div#meeting > div#streams > div#scarousel div#addItem:hover {
-  cursor: pointer;
-  opacity: 1.0;
-}
-body > div#meeting > div#streams > div#scarousel div#addWhiteBoard:hover {
-  cursor: pointer;
-  opacity: 0.5;
-}
-/*</MANJESH>*/
-body > div#meeting > div#streams > div#scarousel div#addItem > img
-{
-   width:100%;
-   height:100%
 }
 div.cloudcarousel {
   width: 300px;
@@ -1039,16 +1012,17 @@ body > div#meeting > div#streams > div#scontrols > input.right {
   -moz-border-radius: 2px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  opacity: 0.6;
 }
 #effectsPanel > div:hover {
   cursor: pointer;
-  opacity: 0.5;
-}
-#effectsPanel > div:active {
   opacity: 1.0;
 }
+#effectsPanel > div:active {
+  opacity: 0.6;
+}
 #effectsPanel > div.selected {
-  opacity: 0.5;
+  opacity: 1.0;
 }
 #effectsPanel > div[effect='none'] {
   background-image: url('../images/user-icon-none.png');
@@ -1059,8 +1033,28 @@ body > div#meeting > div#streams > div#scontrols > input.right {
 #effectsPanel > div[effect='sepia'] {
   background-image: url('../images/user-icon-sepia.png');
 }
+#lower-right > input[type='button'] {
+  opacity: 0.6;
+}
 #lower-right > input[type='button']:hover {
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 1.0;
+}
+.cloudcarousel .control {
+  opacity: 0.6;
+}
+.cloudcarousel .control:hover {
+  cursor: pointer;
+  opacity: 1.0;
+}
+#zoom .close {
+  border: 2px red solid;
+  border-radius: 5px;
+  opacity: 0.6;
+}
+#zoom .close:hover {
+  border: 2px black solid;
+  cursor: pointer;
+  opacity: 1.0;
 }
 /*</MANJESH>*/
